<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_navigation"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_navigation"
        android:title="@string/navigation_search" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_upload_notification"
        android:title="@string/navigation_upload" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_notification"
        android:title="@string/navigation_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_notification"
        android:title="@string/navigation_profile" />

</menu>
