<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.example.myinstagram.models.PostBindingUtil" />
        <import type="android.view.View"/>
        <variable
            name="post"
            type="com.example.myinstagram.models.Post" />
        <variable
            name="homeFragment"
            type="com.example.myinstagram.fragments.HomeFragment" />
    </data>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarUrl"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/avatar_url"
            app:avatarUrl="@{post.user.avatarUrl}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            app:topMargin="@{post.location}"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{post.user.name}"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="14dp"
            android:text="@{post.location}"
            android:textIsSelectable="true"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/imageUrl" />

        <ImageView
            android:id="@+id/imageUrl"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_image_description"
            android:scaleType="fitXY"
            app:imageUrl="@{post.imageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarUrl" />

        <ImageView
            android:id="@+id/likeIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/post_like_icon"
            app:likeIcon="@{post.likeStatus}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageUrl" />

        <ImageView
            android:id="@+id/commentIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/post_comment_icon"
            android:src="@drawable/outline_mode_comment_black_18"
            app:layout_constraintLeft_toRightOf="@id/likeIcon"
            app:layout_constraintTop_toBottomOf="@id/imageUrl" />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/post_share_icon"
            android:src="@drawable/outline_send_black_18"
            app:layout_constraintLeft_toRightOf="@id/commentIcon"
            app:layout_constraintTop_toBottomOf="@id/imageUrl" />

        <ImageView
            android:id="@+id/unknownIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/post_unknown_icon"
            android:src="@drawable/outline_turned_in_not_black_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageUrl" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{@plurals/like(post.likes, post.likes)}"
            android:visibility="@{post.likes != 0 ? View.VISIBLE : View.GONE}"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/likeIcon" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{post.caption}"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/likes" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{@plurals/comment(post.comments, post.comments)}"
            android:visibility="@{post.comments != 0 ? View.VISIBLE : View.GONE}"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caption" />
    </android.support.constraint.ConstraintLayout>
</layout>